package model;

/**
 * An enum representing the positions available for players.
 */
public enum Position {
    GOALIE,
    DEFENDER,
    MIDFIELDER,
    FORWARD
}
